[gd_scene load_steps=3 format=3 uid="uid://bbtunvii0ogrj"]

[ext_resource type="Script" uid="uid://covpvcqb3xwai" path="res://scenes/win_screen/win_screen.gd" id="1_misvs"]
[ext_resource type="Texture2D" uid="uid://b0mx4qepjjvn" path="res://globals/res/heart.png" id="2_1d1ta"]

[node name="WinScreen" type="Node2D"]
script = ExtResource("1_misvs")

[node name="Win" type="Label" parent="."]
custom_minimum_size = Vector2(640, 0)
offset_top = 82.0
offset_right = 640.0
offset_bottom = 242.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 96
text = "YOU WON!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="."]
custom_minimum_size = Vector2(128, 0)
offset_left = 215.0
offset_top = 247.0
offset_right = 425.0
offset_bottom = 295.0
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
mouse_filter = 2
theme_override_font_sizes/font_size = 48
text = "RESTART"

[node name="Quit" type="Button" parent="."]
custom_minimum_size = Vector2(210, 0)
offset_left = 215.0
offset_top = 313.0
offset_right = 425.0
offset_bottom = 361.0
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Play")
mouse_filter = 2
theme_override_font_sizes/font_size = 48
text = "QUIT"

[node name="Heart" type="Sprite2D" parent="."]
position = Vector2(183, 274)
scale = Vector2(2, 2)
texture = ExtResource("2_1d1ta")

[connection signal="focus_entered" from="Play" to="." method="_on_play_focus_entered"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="focus_entered" from="Quit" to="." method="_on_quit_focus_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
